# silly-demos

silly-py/: pyproject.toml
silly-py/silly_py/: 2_cowsay.py  3_antigravity.py  4_matplotlib.py  5_angry_logger.py  6_fuckit.py  internal.py
silly-py/silly_py/data/: book.txt  pollen_week.csv
