[tool.poetry]
name = "silly-py"
version = "0.1.0"
description = ""
authors = ["Toby Devlin <toby@thedevlins.biz>"]

[tool.poetry.dependencies]
python = "^3.9"
angry-logger = "^0.1.0"
cowsay = "^4.0"
fuckit = "^4.8.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
